Fix content getting cut off and add bg image

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 html,
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 /* Tags sorted alphabetically */
@@ -151,6 +151,14 @@ ul {
   overflow: visible;
 }
 
+.p-home {
+  background-image: url("https://png.pngtree.com/png-clipart/20230131/ourmid/pngtree-clouds-clouds-clouds-bottom-frame-png-image_6203042.png");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-color: hsl(219, 30%, 89%);
+  background-blend-mode: luminosity;
+  padding-bottom: 64px;
+}
 .p-home #header {
   background-color: hsl(219, 30%, 89%);
   padding: var(--dim-padding-page);
@@ -171,12 +179,12 @@ ul {
   pointer-events: none;
 }
 .p-home #main-content {
-  /* Add padding to offset nav height */
-  padding-bottom: 64px;
   width: 100%;
-  height: 100%;
 }
 @media (min-width: 768px) {
+  .p-home {
+    padding-bottom: 0;
+  }
   .p-home #header {
     display: flex;
     justify-content: space-between;
@@ -770,13 +778,6 @@ ul {
   }
 }
 /* Smaller modules can be include directly */
-.surface-container-wrapper {
-  background-color: hsl(219, 30%, 89%);
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
 .link {
   color: hsl(221, 51%, 38%);
   text-decoration: underline;
